<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Player</string>
    <string name="search">Search</string>
    <string name="emptyText">vi</string>
    <string name="emptyText1">Type search string here</string>
    <string name="noTrackName">Select track to play...</string>
    <string name="noUrl">URL could not be retrieved: </string>
    <string name="deadUrl">Dead track URL: </string>
    <string name="retrievingUrl">Retrieving URL: </string>
    <string name="nullTiming">00:00</string>
    <string name="defaultPlaylist">Play History</string>
    <string name="newPlaylist">New Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
