<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp">
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="Enter name for new playlist:"
              android:textColor="#FFF"/>
    <EditText android:id="@+id/editText"
              android:text="@string/emptyText"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:gravity="center_vertical"
              android:lines="1"
              android:layout_weight="1"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:padding="10px">
        <Button   android:id="@+id/cancel"
                  android:text="@string/cancel"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:gravity="center_vertical"
                  android:layout_weight="1"/>
        <Button   android:id="@+id/ok"
                  android:text="@string/ok"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:gravity="center_vertical"
                  android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>